--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </table>
 
   <script>
-    const API_URL = "http://localhost:5000"; // 🔹 cámbialo a tu endpoint publicado
+    const API_URL = "https://farmacia-269414280318.europe-west1.run.app"; // 🔹 cámbialo a tu endpoint publicado
 
     async function cargarDatos() {
       try {
