--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 
     <script>
         // API Configuration
-        const API_BASE_URL = 'https://farmacia-frontend-phi.vercel.app'; // Change this to your API URL
+        const API_BASE_URL = 'https://farmacia-269414280318.europe-west1.run.app'; // Change this to your API URL
         
         // Global State
         let currentUser = null;
