--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </form>
                 <p id="errorMsg" class="text-red-500 text-center mt-4"></p>
                 <div class="text-sm text-center text-gray-500 mt-4">
-                    <p>Para esta demostración, puedes usar cualquier DNI y contraseña. Los datos son simulados y se almacenan temporalmente en tu navegador.</p>
+                    <p>Para esta demostracion, puedes usar cualquier DNI y contraseña. Los datos son simulados y se almacenan temporalmente en tu navegador.</p>
                 </div>
             </div>
         </div>
