--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
 // ============================================================================
 // 🔹 1. CONFIGURACIÓN E INICIALIZACIÓN
 // ============================================================================
-const SUPABASE_URL = 'URL_DE_TU_PROYECTO_SUPABASE'; 
-const SUPABASE_ANON_KEY = 'ANON_KEY_DE_TU_PROYECTO_SUPABASE';
-const API_URL = 'URL_DE_TU_API_EN_.NET'; // La que ya tenías
+const SUPABASE_URL = 'https://ccfgclymyeciqbgrdfuf.supabase.co'; 
+const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNjZmdjbHlteWVjaXFiZ3JkZnVmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTY4NTcwODQsImV4cCI6MjA3MjQzMzA4NH0.hN5kiIxFa4FAzsI4UWJGcKQyTTu30dk6M6ybN-PQ2GM';
+const API_URL = 'https://farmacia-269414280318.europe-west1.run.app'; // La que ya tenías
 
 const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
